# TradeTracker

./: .gitignore  ANALYTICS_EVENTS_SUMMARY.md  BREVO_SETUP_GUIDE.md  FIREBASE_AUTH_SETUP.md  FIREBASE_SETUP.md  GOOGLE_ANALYTICS_SETUP.md  README.md  SEO_IMPLEMENTATION_GUIDE.md  STOCKS_DATABASE_IMPLEMENTATION.md  env.local.example  next.config.ts  package-lock.json  package.json  start-dev-windows.bat
backend/: .dockerignore  .render-buildpacks  DEPLOYMENT.md  DockerFile  Dockerfile  Dockerfile.alternative  FEES_API_IMPLEMENTATION.md  REMINDER_EMAIL_GUIDE.md  RENDER_DEPLOYMENT.md  WEEKLY_SUMMARY_GUIDE.md  build-docker.bat  build-docker.sh  build-render.bat  build-render.sh  convert_firebase_env.py  docker-compose.yml  email_service.py  env.example  import_trades_simple.py  main.py  main_firebase.py  main_simple.py  pyproject.toml  render.yaml  requirements.txt  send_reminder_emails.py
backend/email_scripts/reminder_emails_script/: REMINDER_EMAIL_GUIDE.md
backend/email_scripts/update_emails_script/: README.md  send_update_emails.py  test_update_email.py
backend/email_scripts/weekly_summary_script/: WEEKLY_SUMMARY_GUIDE.md  send_weekly_summary.py
landing_page/: README.md  package-lock.json  package.json
src/app/: layout.tsx  loading.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
src/components/: ActiveTrades.tsx  CalendarView.tsx  Dashboard.tsx  Journal.tsx  Layout.tsx  LoadingSkeleton.tsx  Login.tsx  MonthSelector.tsx  MonthlyReturns.tsx  Profile.tsx  ProgressTracker.tsx  ProtectedRoute.tsx  QtyCalculator.tsx  StocksDatabase.tsx  StructuredData.tsx  (+2 more)
(+24 files in other folders)
