[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradetracker-backend"
version = "1.0.0"
description = "Trade Tracker Backend API"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "firebase-admin==6.4.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "cryptography==41.0.7",
]

[tool.setuptools]
packages = ["."]

[tool.pip]
only-binary = "all"
